--- a/Desk/index.html
+++ b/Desk/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <main class="fly-birds-page_eb4c1f3c33 div1">
-
+<div style="padding: 0.1rem;"></div>
 <div style="padding: 0.5rem;"></div>
 <div class="section div2 lazy" data-type="bg" data-id="chyv1hg01b" data-background-image="" >
 <img alt="Redmi Note 12" class="xm-img image3 lazy" data-id="94twtxx83b" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/8975e73b16af8f61789af0bc9d2928e7.jpg"/>
