--- a/Desk/index.html
+++ b/Desk/index.html
@@ -12,8 +12,13 @@
 <link href="https://s05.appmifile.com/sgp/spps_files/product/2.9.34/pc_v4/redmi-note-12/css/public.chunk.css" rel="stylesheet"/>
 <link href="./assets/css/main.css" rel="stylesheet" />
 
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+
 <script src="../assets/js/main.js"></script>
-<script src="./assets/js/main.js"></script>
+
 
 </head>
 
@@ -459,40 +464,31 @@
 <div class="xm-scroll image169" data-type="scroll" data-id="adtgbo1pua" style="transform: translate(0px, 0px)">
 <div class="slick-slider slick-initialized" dir="ltr">
 <div class="slick-list">
-<div class="slick-track" style="width: 700%; left: -100%">
 
-<div ata-index="0" class="slick-slide slick-active slick-current" tabindex="-1" aria-hidden="false" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
+<div class="galeria">
 
-<div>
+<div ata-index="0" class="slick-slide" tabindex="-1"  style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
 <img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/2ec6e976238df886fb0adef26623a073.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
-</div>
+
+<span data-key="overview_75" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhinulom">Azul</span>
 </div>
 
-<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline: none; width: 14.285714285714286%; position: relative; left: -14px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<div>
+<div data-index="1" class="slick-slide" tabindex="-1" style="outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
 <img class="lazy" data-src="https://i02.appmifile.com/537_operatorx_operatorx_xm/16/03/2023/137ef3abe0cdf3f7ddd6aea1f9f03222.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
 </div>
-</div>
 
-<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: -28px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-    
-<div>
+<div data-index="2" class="slick-slide" tabindex="-1" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
 <img class="lazy" data-src="https://i02.appmifile.com/861_operatorx_operatorx_xm/16/03/2023/0ac834a7279d58346efb2fa8196442cc.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
 </div>
-</div>
-</div>
-</div>
 
-<ul style="display: block" class="slick-dots">
-<li class=""><button>1</button></li>
-<li class=""><button>2</button></li>
-<li class=""><button>3</button></li>
-</ul>
+</div>
+</div>
 </div>
 </div>
 
 <div class="words">
-<div class="J_words active">
+
+<div class="J_words">
 <span data-key="overview_75" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhinulom">Azul</span>
 </div>
 
@@ -592,11 +588,11 @@
 <span data-key="note_5" class="xm-text split_text3189 f-light" data-type="text" data-id="joxr7ykobd">*O dispositivo com IP53 foi testado para ser resistente a respingos e poeira na presença de condições específicas de laboratório com a classificação IP53 de proteção contra entrada com base na IEC 60529:1989+A1:1999+A2:2013 Observe que as condições de teste de resistência à água referem-se apenas a condições específicas testadas em um ambiente laboratorial, que não correspondem às condições normais de uso pelos consumidores. Recomendamos que você não teste por conta própria. Não é recomendado para uso na praia ou piscina. A proteção contra entrada pode se deteriorar com o desgaste diário, danos físicos e/ou desmontagem necessária em caso de reparo. Evite carregar o produto, operar os botões físicos ou remover a bandeja do SIM quando o produto estiver exposto à umidade. Por favor, consulte cuidadosamente o manual do usuário para outras instruções de segurança. A garantia não cobrirá danos líquidos causados em ambientes além da condição de teste IP53. </span>
 </div>
 
-
-
 </div>
 </div>
-
 </main>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./assets/js/main.js"></script>
 </body>
 </html>
