--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="https://i02.appmifile.com/i18n/fonts/CamphorPro/index.css" />
 <link href="https://s05.appmifile.com/sgp/spps_files/product/2.9.34/pc_v4/redmi-note-12/css/public.chunk.css" rel="stylesheet"/>
-<link href="./assets/css/main.css" rel="stylesheet" />
+<link href="./Desk/assets/css/main.css" rel="stylesheet" />
 
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
@@ -25,6 +25,7 @@
 <body>
 
 <main class="fly-birds-page_eb4c1f3c33 div1">
+
 <div style="padding: 0.1rem;"></div>
 <div class="section div2 lazy" data-type="bg" data-id="chyv1hg01b" data-background-image="" >
 <img alt="Redmi Note 12" class="xm-img image3 lazy" data-id="94twtxx83b" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/8975e73b16af8f61789af0bc9d2928e7.jpg"/>
@@ -593,6 +594,6 @@
 </main>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="./assets/js/main.js"></script>
+<script src="./Desk/assets/js/main.js"></script>
 </body>
 </html>
