--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 </div>
 
 <div class="section div84 lazy" data-type="bg" data-id="j0ne3vjb2s" data-background-image="">
-<img alt="Redmi Note 12" class="xm-img image85 lazy" data-id="3l6bgcycki" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/e43bf53e5ac24e40e05c60336cd2b705.jpg"/>
+<img alt="Redmi Note 12" class="xm-img image85 lazy" data-id="3l6bgcycki" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/e43bf53e5ac24e40e05c60336cd2b705.jpg"/>
 <div class="div86">
 <div class="div87">
 <span data-key="overview_31" class="xm-text split_text3146 f-bold" data-type="text" data-id="51uqkub2yq">Combinação rápida de armazenamento e memória RAM</span>
