--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </div>
 
 <div class="div42">
-<span data-key="overview_10" class="xm-text split_text3131 f-light" data-type="text" data-id="nvd72vg7s0">Todos os modelos Redmi Note 12 possuem uma impressionante e atraente tela OLED. Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reprodução vibrante de cores.</span>
+<span data-key="overview_10" class="xm-text split_text3131 f-light" data-type="text" data-id="nvd72vg7s0">Todos os modelos Redmi Note 12 possuem uma impressionante e atraente tela OLED.<br>Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reprodução vibrante de cores.</span>
 </div>
 
 <div class="spacer"></div>
@@ -235,7 +235,7 @@
 </div>
 
 <div class="section div84 lazy" data-type="bg" data-id="j0ne3vjb2s" data-background-image="">
-<img alt="Redmi Note 12" class="xm-img image85 lazy" data-id="3l6bgcycki" src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/e43bf53e5ac24e40e05c60336cd2b705.jpg"/>
+<img alt="Redmi Note 12" class="xm-img image85 lazy" data-id="3l6bgcycki" data-src="./Desk/assets/Media/84.png"/>
 <div class="div86">
 <div class="div87">
 <span data-key="overview_31" class="xm-text split_text3146 f-bold" data-type="text" data-id="51uqkub2yq">Combinação rápida de armazenamento e memória RAM</span>
@@ -313,7 +313,7 @@
 </div>
 
 <div class="div115">
-<img alt="Redmi Note 12" class="xm-img image116 lazy" data-id="g0nici3cyd" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/6ee869c96614326260750656df37c04a.png" />
+<img alt="Redmi Note 12" class="xm-img image116 lazy" data-id="g0nici3cyd" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/6ee869c96614326260750656df37c04a.png"/>
 <div class="div117">
 <div class="div118">
 <span data-key="overview_45" class="xm-text split_text3152 f-bold" data-type="text" data-id="blvg88i6cs">9 horas</span>
@@ -460,6 +460,7 @@
 </div>
 </div>
 </div>
+
 <div class="section div168 lazy" data-type="bg" data-id="brtlh72gtq" data-background-image="">
 
 <div class="xm-scroll image169" data-type="scroll" data-id="adtgbo1pua" style="transform: translate(0px, 0px)">
@@ -509,7 +510,7 @@
 
 <div class="spacer"></div>
 <div class="div172">
-<span data-key="overview_66" class="xm-text split_text3178 f-light" data-type="text" data-id="et57hqwznl">Elegante, leve e confortável de segurar. Três cores deslumbrantes para escolher.</span>
+<span data-key="overview_66" class="xm-text split_text3178 f-light" data-type="text" data-id="et57hqwznl">Elegante, leve e confortável de segurar.<br>Três cores deslumbrantes para escolher.</span>
 </div>
 </div>
 </div>
