--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div style="padding: 0.1rem;"></div>
 <div class="section div2 lazy" data-type="bg" data-id="chyv1hg01b" data-background-image="" >
 <img alt="Redmi Note 12" class="xm-img image3 lazy" data-id="94twtxx83b" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/8975e73b16af8f61789af0bc9d2928e7.jpg"/>
-<img alt="Redmi Note 12" class="xm-img image4 lazy" data-id="kik3m6nr33" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/bd4aa51fea59686cdd83a4888626a2b8.png" />
+<img alt="Redmi Note 12" class="xm-img image4 lazy" data-id="kik3m6nr33" src="./Desk/assets/Media/logo.png" />
 <div class="div5">
 <div class="div6">
 <div class="text-container-2746">
