--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
-<title>Redmi Note 12 | Xiaomi Global</title>
+<title>Redmi Note 12</title>
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
 <link rel="stylesheet" href="https://i02.appmifile.com/i18n/fonts/CamphorPro/index.css" />
