--- a/Mob/index.html
+++ b/Mob/index.html
@@ -14,6 +14,10 @@
 
 <script src="../assets/js/main.js"></script>
 <script src="../Desk/assets/js/main.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="./assets/js/main.js"></script>
+
 </head>
 
 <body>
@@ -450,44 +454,39 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 
 <div class="div171">
-<div class="xm-scroll image175" data-type="scroll" data-id="adtgbo1pua"
-style="transform: translate(0px, 0px)">
+<div class="xm-scroll image175" data-type="scroll" data-id="adtgbo1pua" style="transform: translate(0px, 0px)">
 <div class="slick-slider slick-initialized" dir="ltr">
 <div class="slick-list">
-<div class="slick-track" style="width: 700%; left: -100%">
+
+<div class="galeria">
 
 <div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1" aria-hidden="false" style=" outline: none; width: 14.285714285714286%; position: relative;
 left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<div>
 <img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/m/bfb99a6e209b9d83caf53dd8095732ab.png" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
 </div>
-</div>
 
-<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: -14px; opacity: 0; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<div>
+<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
 <img class="lazy" data-src="https://i02.appmifile.com/368_operatorx_operatorx_xm/16/03/2023/ff9aad5fe02f20585f5565ab039c6a4c.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
 </div>
-</div>
 
-<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: -28px; opacity: 0; transition: opacity 500ms ease,
+<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease,
 visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<div>
 <img class="lazy" data-src="https://i02.appmifile.com/969_operatorx_operatorx_xm/16/03/2023/57bb98a8b3612a6a6b7f6ffdb5bb80c5.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
 </div>
 </div>
-</div>
+
 </div>
 
 <ul style="display: block" class="slick-dots">
-    <li class=""><button>1</button></li>
-    <li class=""><button>2</button></li>
-    <li class=""><button>3</button></li>
+    <li class=""><button></button></li>
+    <li class=""><button></button></li>
+    <li class=""><button></button></li>
 </ul>
 </div>
 </div>
 
 <div class="words">
-<div class="J_words active">
+<div class="J_words">
 <span data-key="overview_75" class="xm-text split_text3093 f-bold" data-type="text" data-id="zhedg1v5fk">Azul</span>
 </div>
 
@@ -557,21 +556,20 @@ visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms 
 <div class="div199">
 <span data-key="note_3" class="xm-text split_text3103 f-light" data-type="text" data-id="km5etly6gx">*A acessibilidade de alguns recursos pode variar entre regiões. As imagens e recursos do produto mostrados são apenas para referência, as imagens mostradas na tela de exibição são simuladas e apenas para fins de demonstração. Por favor, considere os produtos reais como padrão.</span>
 </div>
-
+<br>
 <div class="div200">
-<span data-key="note_4" class="xm-text split_text3104 f-light" data-type="text" data-id="2oyy72wy2i">*Data related to battery and charging was obtained from internal laboratories. Actual results may vary according
-to differences in software versions, environment and usage conditions, and may not reflect the actual product.</span>
+<span data-key="note_4" class="xm-text split_text3104 f-light" data-type="text" data-id="2oyy72wy2i">*Os dados relacionados à bateria e ao carregamento foram obtidos em laboratórios internos. Os resultados reais podem variar de acordo com diferenças nas versões de software, ambiente e condições de uso e podem não refletir o produto real.</span>
 </div>
-
+<br>
 <div class="div201">
-<span data-key="note_5" class="xm-text split_text3105 f-light" data-type="text" data-id="fx7zb3er4v">*All comparisons made on this page to typical phones refer to typical Redmi phones; Unless otherwise indicated on this product page, all data come from Xiaomi Laboratories, design and technology parameters, and data provided by vendors. The testing data may vary lightly between different test versions and testing environments.
+<span data-key="note_5" class="xm-text split_text3105 f-light" data-type="text" data-id="fx7zb3er4v">*Todas as comparações feitas nesta página com telefones típicos referem-se a telefones Redmi típicos; A menos que indicado de outra forma nesta página do produto, todos os dados vêm dos Laboratórios Xiaomi, parâmetros de design e tecnologia e dados fornecidos pelos fornecedores. Os dados de teste podem variar ligeiramente entre diferentes versões de teste e ambientes de teste. Todos os números mostrados nesta página do produto são apenas para referência e podem não refletir o produto real.
 
-All figures shown on this product page are for reference only and may not reflect the actual product.
-*The device with IP53 has been tested to be resistant to splash and dust in the presence of specific laboratory conditions with the classification IP53 ingress protection based on IEC 60529:1989+A1:1999+A2:2013 Please be noted that the test conditions of water resistance only pertain to specific conditions tested in a laboratory environment, which do not correspond to the normal conditions of use by consumers. We recommend that you do not test it by yourself. Not advised for beach or pool use. Ingress protection might deteriorate from daily wear and tear, physical damage and/or disassembly needed in case of repair. Avoid charging the product, operating the physical buttons, or removing the SIM tray when product is exposed to moisture. Please carefully refer to user&#x27;s manual for other safety instructions. The warranty will not cover the liquid damage caused in the environments beyond the IP53 test condition.</span>
+*O dispositivo com IP53 foi testado para ser resistente a respingos e poeira na presença de condições específicas de laboratório com a classificação IP53 de proteção contra entrada com base na IEC 60529:1989+A1:1999+A2:2013 Observe que as condições de teste de resistência à água referem-se apenas a condições específicas testadas em um ambiente laboratorial, que não correspondem às condições normais de uso pelos consumidores. Recomendamos que você não teste por conta própria. Não é recomendado para uso na praia ou piscina. A proteção contra entrada pode se deteriorar com o desgaste diário, danos físicos e/ou desmontagem necessária em caso de reparo. Evite carregar o produto, operar os botões físicos ou remover a bandeja do SIM quando o produto estiver exposto à umidade. Por favor, consulte cuidadosamente o manual do usuário para outras instruções de segurança. A garantia não cobrirá danos líquidos causados em ambientes além da condição de teste IP53. </span>
 </div>
 </div>
 </div>
 </main>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="../Desk/assets/js/main.js"></script>
 </body>
 </html>
