--- a/Mob/index.html
+++ b/Mob/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html xml:lang="en" lang="en">
+<html lang="pt-br">
 
 <head>
 
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Redmi Note 12 | Xiaomi Global</title>
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
+<title>Redmi Note 12</title>
+<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
-<link rel="stylesheet" href="https://i02.appmifile.com/i18n/fonts/CamphorPro/index.css" />
-<link href="https://s05.appmifile.com/sgp/spps_files/product/2.9.35/mobile_v4/redmi-note-12/css/public.chunk.css" rel="stylesheet" />
-<link href="https://s05.appmifile.com/sgp/spps_files/product/2.9.35/mobile_v4/redmi-note-12/css/main.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://i02.appmifile.com/i18n/fonts/CamphorPro/index.css"/>
+<link rel="stylesheet" href="https://s05.appmifile.com/sgp/spps_files/product/2.9.35/mobile_v4/redmi-note-12/css/public.chunk.css"/>
+<link rel="stylesheet" href="./assets/css/main.css"/>
 
 <script src="../assets/js/main.js"></script>
 <script src="../Desk/assets/js/main.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script src="./assets/js/main.js"></script>
+<script src="./assets/js/slick.js"></script>
 
 </head>
 
@@ -460,24 +460,22 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 
 <div class="galeria">
 
-<div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1" aria-hidden="false" style=" outline: none; width: 14.285714285714286%; position: relative;
-left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/m/bfb99a6e209b9d83caf53dd8095732ab.png" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
+<div ata-index="0" class="slick-slide" tabindex="-1"  style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
+<img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/m/bfb99a6e209b9d83caf53dd8095732ab.png" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
 </div>
 
-<div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<img class="lazy" data-src="https://i02.appmifile.com/368_operatorx_operatorx_xm/16/03/2023/ff9aad5fe02f20585f5565ab039c6a4c.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
+<div data-index="1" class="slick-slide" tabindex="-1" style="outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
+<img class="lazy" data-src="https://i02.appmifile.com/368_operatorx_operatorx_xm/16/03/2023/ff9aad5fe02f20585f5565ab039c6a4c.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
 </div>
 
-<div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease,
-visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
-<img class="lazy" data-src="https://i02.appmifile.com/969_operatorx_operatorx_xm/16/03/2023/57bb98a8b3612a6a6b7f6ffdb5bb80c5.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block" />
-</div>
+<div data-index="2" class="slick-slide" tabindex="-1" style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
+<img class="lazy" data-src="https://i02.appmifile.com/969_operatorx_operatorx_xm/16/03/2023/57bb98a8b3612a6a6b7f6ffdb5bb80c5.jpg" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
 </div>
 
 </div>
+</div>
 
-<ul style="display: block" class="slick-dots">
+<ul  class="slick-dots">
     <li class=""><button></button></li>
     <li class=""><button></button></li>
     <li class=""><button></button></li>
