--- a/Mob/index.html
+++ b/Mob/index.html
@@ -13,10 +13,9 @@
 <link rel="stylesheet" href="./assets/css/main.css"/>
 
 <script src="../assets/js/main.js"></script>
-<script src="../Desk/assets/js/main.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script src="./assets/js/slick.js"></script>
+<script src="."></script>
 
 </head>
 
@@ -458,7 +457,7 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 <div class="slick-slider slick-initialized" dir="ltr">
 <div class="slick-list">
 
-<div class="galeria">
+<div class="slick">
 
 <div ata-index="0" class="slick-slide" tabindex="-1"  style=" outline: none; width: 14.285714285714286%; position: relative; left: 0; opacity: 1; transition: opacity 500ms ease, visibility 500ms ease; -webkit-transition: opacity 500ms ease, visibility 500ms ease;">
 <img class="lazy" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/m/bfb99a6e209b9d83caf53dd8095732ab.png" alt="" tabindex="-1" style="width: 100%; display: inline-block"/>
@@ -475,10 +474,10 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 </div>
 
-<ul  class="slick-dots">
-    <li class=""><button></button></li>
-    <li class=""><button></button></li>
-    <li class=""><button></button></li>
+<ul  style="display: block;" class="slick-dots">
+    <li class=""><button>1</button></li>
+    <li class=""><button>2</button></li>
+    <li class=""><button>3</button></li>
 </ul>
 </div>
 </div>
@@ -568,6 +567,7 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 </main>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="../Desk/assets/js/main.js"></script>
+<script src="./assets/js/slick.js"></script>
+
 </body>
 </html>
