--- a/Mob/index.html
+++ b/Mob/index.html
@@ -453,7 +453,7 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 
 <div class="div171">
-<div class="xm-scroll image175" data-type="scroll" data-id="adtgbo1pua" style="transform: translate(0px, 0px)">
+<div class="xm-scroll image175" data-type="scroll" data-id="adtgbo1pua">
 <div class="slick-slider slick-initialized" dir="ltr">
 <div class="slick-list">
 
@@ -474,11 +474,7 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 </div>
 
-<ul  style="display: block;" class="slick-dots">
-    <li class=""><button>1</button></li>
-    <li class=""><button>2</button></li>
-    <li class=""><button>3</button></li>
-</ul>
+
 </div>
 </div>
 
@@ -565,9 +561,10 @@ Assista seus conteúdos favoritos ganharem vida com pretos perfeitos e reproduç
 </div>
 </div>
 </div>
+
 </main>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="./assets/js/slick.js"></script>
-
+ 
 </body>
 </html>
