--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 </div>
 
 <div class="div102">
-<span data-key="overview_38" class="xm-text split_text3149 f-light" data-type="text" data-id="1qfjduwz5h">Habilitado pelas tecnologias Mi-FC e MMT, recarregue rapidamente com 33Wde potência.</span>
+<span data-key="overview_38" class="xm-text split_text3149 f-light" data-type="text" data-id="1qfjduwz5h">Habilitado pelas tecnologias Mi-FC e MMT, recarregue rapidamente com 33W de potência.</span>
 </div>
 </div>
 </div>
@@ -340,14 +340,10 @@
 <div class="section div125 lazy" data-type="bg" data-id="mue4mqunxy" data-background-image="">
 <img alt="Redmi Note 12" class="xm-img image126 lazy" data-id="pxodof8dp1" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/pc/7d8ab8931e9ba54d23a2fb5f9e886d4d.jpg"/>
 <div class="div127">
-<div class="div128">
-<span data-key="overview_47" class="xm-text split_text3164 f-bold" data-type="text" data-id="srf0rvixrw">Câmera tripla de 50MP capturando seus melhores momentos 
-</span>
+<div class="div128"><span data-key="overview_47" class="xm-text split_text3164 f-bold" data-type="text" data-id="srf0rvixrw">Câmera tripla de 50MP capturando seus melhores momentos</span>
 </div>
 
-<div class="div129">
-<span data-key="overview_48" class="xm-text split_text3165 f-light" data-type="text" data-id="getyokw2g6">Capture o mundo de todos os ângulos com um conjunto de câmera tripla com uma lente principal de alta resolução, uma lente ultra grande angular e uma lente macro dedicada.</span>
-</div>
+<div class="div129"><span data-key="overview_48" class="xm-text split_text3165 f-light" data-type="text" data-id="getyokw2g6">Capture o mundo de todos os ângulos com um conjunto de câmera tripla com uma lente principal de alta resolução, uma lente ultra grande angular e uma lente macro dedicada.</span></div>
 </div>
 
 <div class="div130">
