--- a/index.html
+++ b/index.html
@@ -480,17 +480,10 @@
 
 <div class="words">
 
-<div class="J_words">
-<span data-key="overview_75" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhinulom">Azul</span>
-</div>
+<div class="J_words"><span data-key="overview_75" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhinulom">Azul</span></div>
+<div class="J_words"><span data-key="overview_74" class="xm-text split_text3176 f-bold" data-type="text" data-id="v19h77flom">Verde</span></div>
+<div class="J_words"><span data-key="overview_73" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhv876ym">Cinza</span></div>
 
-<div class="J_words">
-<span data-key="overview_74" class="xm-text split_text3176 f-bold" data-type="text" data-id="v19h77flom">Verde</span>
-</div>
-
-<div class="J_words">
-<span data-key="overview_73" class="xm-text split_text3176 f-bold" data-type="text" data-id="v1qhv876ym">Cinza</span>
-</div>
 </div>
 
 <div class="div170">
@@ -564,7 +557,7 @@
 </div>
 
 <div class="div201">
-<span data-key="note_3" class="xm-text split_text3187 f-light" data-type="text" data-id="9fqno1sxz9">*A acessibilidade de alguns recursos pode variar entre regiões. As imagens e recursos do produto mostrados são apenas para referência, as imagens mostradas na tela de exibição são simuladas e apenas para fins de demonstração. Por favor, considere os produtos reais como padrão.</span >
+<span data-key="note_3" class="xm-text split_text3187 f-light" data-type="text" data-id="9fqno1sxz9">*A acessibilidade de alguns recursos pode variar entre regiões. As imagens e recursos do produto mostrados são apenas para referência, as imagens mostradas na tela de exibição são simuladas e apenas para fins de demonstração. Por favor, considere os produtos reais como padrão.</span>
 </div>
 
 <div class="div203">
