--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div style="padding: 0.1rem;"></div>
 <div class="section div2 lazy" data-type="bg" data-id="ohxdtf5q8o" data-background-image="">
 <img alt="" class="xm-img image3 lazy" data-id="7nx4ivkg70" data-src="https://i02.appmifile.com/mi-com-product/fly-birds/redmi-note-12/m/32abaf4b7fb43facf99de438c694d59e.jpg" />
-<img alt="" class="xm-img image4 lazy" data-id="q91n2j9hmx" data-src="../Desk/assets/Media/logo.png" />
+<img alt="" class="xm-img image4 lazy" data-id="q91n2j9hmx" data-src="./Mob/assets/media/logo.png" />
 <div class="div5">
 <div class="div6">
 <div class="text-container-2667">
